--- a/segundoarchivo.html
+++ b/segundoarchivo.html
@@ -7,5 +7,6 @@
 <body>
     <h1> Encabezado de prueba modificado</h1>
     <h2> prueba 10/09</h2>
+    <h3> modificado en github</h3>
 </body>
 </html>
