--- a/segundoarchivo.html
+++ b/segundoarchivo.html
@@ -8,5 +8,7 @@
     <h1> Encabezado de prueba modificado</h1>
     <h2> prueba 10/09</h2>
     <h3> modificado en github</h3>
+    <h2> prueba 10/09</h2>
+    <h3> modificado en equipo</h3>
 </body>
 </html>
